<resources>
    <string name="app_name">Altla Vision Builder</string>

    <string name="button_translate">TRANSLATE</string>
    <string name="button_rotate">ROTATE</string>
    <string name="button_scale">SCALE</string>
    <string name="button_x_axis">X-axis</string>
    <string name="button_y_axis">Y-axis</string>
    <string name="button_z_axis">Z-axis</string>
    <string name="button_edit">Edit</string>
    <string name="button_create">Create</string>
    <string name="button_delete">DELETE</string>
    <string name="button_detail">Detail</string>
    <string name="button_find_by_name">Find by Name</string>
    <string name="button_find_by_place">Find by Place</string>

    <string name="radio_button_public">Public</string>
    <string name="radio_button_group">Group</string>
    <string name="radio_button_user">User</string>

    <string name="snackbar_failed">Failed.</string>
    <string name="snackbar_done">Done.</string>
    <string name="snackbar_google_sign_in_failed">Google Sign-In failed.</string>
    <string name="snackbar_google_sign_in_reqiured">Sign-in required.</string>
    <string name="snackbar_area_learning_permission_required">Area Learning permission required.</string>
    <string name="snackbar_image_file_not_found">Image file not found.</string>
    <string name="snackbar_action_request_permission">Request permission</string>

    <string name="toast_google_api_client_connection_failed">Google Play Services error.</string>

    <string name="progress_dialog_signin_in">Signing in...</string>
    <string name="progress_dialog_upload">Uploading...</string>

    <string name="nav_sign_out">Sign out</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="dialog_ok">OK</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_content_confirm_delete_texture">Delete this texture?</string>

    <string name="hint_edit_name">Input the name</string>

    <string name="label_id">ID</string>
    <string name="label_place">Place</string>
    <string name="label_level">Level</string>
    <string name="label_name">Name</string>
    <string name="label_area">Area</string>
    <string name="label_area_description">Area Description</string>
    <string name="label_scene">Scene</string>
    <string name="label_position">Position</string>
    <string name="label_orientation">Orientation</string>
    <string name="label_scale">Scale</string>
    <string name="label_created_at">Created At</string>
    <string name="label_updated_at">Updated At</string>
    <string name="label_x">X</string>
    <string name="label_y">Y</string>
    <string name="label_z">Z</string>
    <string name="label_w">W</string>
    <string name="label_area_mode">Area Mode</string>

    <string name="title_project">Project</string>
    <string name="title_select_area">Select Area</string>
    <string name="title_user_area_description_list_in_area">Select Area Description</string>

    <string name="action_create">Create</string>
    <string name="action_debug">Debug ON/OFF</string>
    <string name="action_close">Close</string>
    <string name="action_edit">Edit</string>
    <string name="action_save">Save</string>
    <string name="action_pick_place">Pick Place</string>

    <string name="input_error_required">Required.</string>
    <string name="button_start">Start</string>
    <string name="button_select">Select</string>
    <string name="label_area_mode_public">Public mode</string>
    <string name="label_area_mode_user">User mode</string>

</resources>
