<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/view_top"
              android:paddingStart="@dimen/content_horizontal_margin"
              android:paddingEnd="@dimen/content_horizontal_margin"
              android:paddingTop="@dimen/content_vertical_margin"
              android:paddingBottom="@dimen/content_vertical_margin"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.lakeel.altla.vision.builder.presentation.view.fragment.UserActorFragment">

    <TextView android:text="@string/label_id"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_id"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/label_name"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_name"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/label_position"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_position"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/label_orientation"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_orientation"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/label_scale"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_scale"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/label_created_at"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_created_at"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:text="@string/label_updated_at"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <TextView android:id="@+id/text_view_updated_at"
              android:textAppearance="@style/TextAppearance.AppCompat.Caption"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

</LinearLayout>
