<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/view_top"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.lakeel.altla.vision.builder.presentation.view.fragment.UserSceneCreateFragment">

    <TextView android:text="@string/label_name"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layput_name"
            android:layout_marginTop="@dimen/content_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_edit_text_name"
                android:inputType="text"
                android:maxLength="25"
                android:hint="@string/hint_edit_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </android.support.design.widget.TextInputLayout>

    <Button android:id="@+id/button_create"
            android:text="@string/button_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

</LinearLayout>
