<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:id="@+id/view_top"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".presentation.view.fragment.ArFragment">

    <org.rajawali3d.view.TextureView
            android:id="@+id/texture_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    <RelativeLayout android:id="@+id/view_group_edit_user_actor_menu"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_marginTop="@dimen/content_vertical_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

        <LinearLayout android:id="@+id/view_group_edit_actor_menu"
                      android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <Button android:id="@+id/button_translate"
                    android:text="@string/button_translate"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_rotate"
                    android:text="@string/button_rotate"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_scale"
                    android:text="@string/button_scale"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_detail"
                    android:text="@string/button_detail"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_delete"
                    android:text="@string/button_delete"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/view_group_translate_menu"
                      android:layout_below="@id/view_group_edit_actor_menu"
                      android:layout_marginTop="@dimen/content_vertical_margin"
                      android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <Button android:id="@+id/button_translate_in_x_axis"
                    android:text="@string/button_x_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_translate_in_y_axis"
                    android:text="@string/button_y_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_translate_in_z_axis"
                    android:text="@string/button_z_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

        <LinearLayout android:id="@+id/view_group_rotate_menu"
                      android:layout_below="@id/view_group_edit_actor_menu"
                      android:layout_marginTop="@dimen/content_vertical_margin"
                      android:orientation="horizontal"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content">

            <Button android:id="@+id/button_rotate_in_x_axis"
                    android:text="@string/button_x_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_rotate_object_in_y_axis"
                    android:text="@string/button_y_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <Button android:id="@+id/button_rotate_object_in_z_axis"
                    android:text="@string/button_z_axis"
                    android:textColor="@drawable/button_text_color"
                    android:background="@drawable/button_background"
                    android:layout_marginStart="@dimen/content_horizontal_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>

    </RelativeLayout>

    <FrameLayout android:id="@+id/user_image_asset_list_container"
                 android:layout_gravity="bottom"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>

    <FrameLayout android:id="@+id/debug_console_container"
                 android:layout_marginStart="@dimen/content_horizontal_margin"
                 android:layout_marginEnd="@dimen/content_horizontal_margin"
                 android:layout_marginTop="@dimen/content_vertical_margin"
                 android:layout_marginBottom="@dimen/content_vertical_margin"
                 android:layout_gravity="top"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"/>

    <com.google.atap.tango.ux.TangoUxLayout
            android:id="@+id/layout_tango_ux"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

</FrameLayout>
