<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/view_top"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="com.lakeel.altla.vision.builder.presentation.view.fragment.ProjectFragment">

    <TextView android:text="@string/label_area"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <ImageButton android:id="@+id/image_button_select_area"
                     android:src="@drawable/ic_map_black_24dp"
                     android:background="?android:attr/actionBarItemBackground"
                     android:tint="@color/tint_image_button_enabled"
                     android:layout_width="@dimen/touch_target_width"
                     android:layout_height="@dimen/touch_target_height"/>

        <TextView android:id="@+id/text_view_area_name"
                  android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                  android:layout_gravity="center_vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView android:text="@string/label_area_description"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <ImageButton android:id="@+id/image_button_select_area_description"
                     android:src="@drawable/ic_cube_black_24dp"
                     android:background="?android:attr/actionBarItemBackground"
                     android:tint="@color/tint_image_button_enabled"
                     android:layout_gravity="center_vertical"
                     android:layout_width="@dimen/touch_target_width"
                     android:layout_height="@dimen/touch_target_height"/>

        <TextView android:id="@+id/text_view_area_description_name"
                  android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                  android:layout_gravity="center_vertical"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView android:text="@string/label_scene"
              android:textAppearance="@style/TextAppearance.AppCompat.Body1"
              android:layout_marginTop="@dimen/content_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"/>

    <LinearLayout android:orientation="horizontal"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">

        <ImageButton android:id="@+id/image_button_select_scene"
                     android:src="@drawable/ic_image_black_24dp"
                     android:background="?android:attr/actionBarItemBackground"
                     android:tint="@color/tint_image_button_enabled"
                     android:layout_width="@dimen/touch_target_width"
                     android:layout_height="@dimen/touch_target_height"/>

        <TextView android:id="@+id/text_view_scene_name"
                  android:textAppearance="@style/TextAppearance.AppCompat.Caption"
                  android:layout_gravity="center_vertical"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"/>

    </LinearLayout>

    <Button android:id="@+id/button_edit"
            android:text="@string/button_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

</LinearLayout>
